api linkage and URL Generation

--- a/index.html
+++ b/index.html
@@ -123,5 +123,7 @@
         <div class="container">© 2022 Copyright Text</div>
       </div> -->
     </footer>
+    <script src="/JS/api1.js"></script>
+    <script src="/JS/api2.js"></script>
   </body>
 </html>
