--- a/index.html
+++ b/index.html
@@ -42,11 +42,12 @@
       <div class="col s7">
         <div class="input-field col s6">
           <input
-            value="Movie Title..."
+            value=""
             id="first_name2"
             type="text"
             class="validate"
           />
+          <button id="movie-btn">Click</button>
           <label class="active" for="first_name2">Search for a Movie</label>
         </div>
       </div>
