Added JS functionality for rendering movie results

--- a/index.html
+++ b/index.html
@@ -45,30 +45,33 @@
             value=""
             id="first_name2"
             type="text"
-            class="validate"
+            class="validate user-input"
           />
           <button id="movie-btn">Click</button>
           <label class="active" for="first_name2">Search for a Movie</label>
         </div>
       </div>
       <div class="col s5">
-        <span class="flow-text"
-          >5-columns wide pulled to the left by 7-columns.</span
-        >
+        <ul class="results-flex">
+          <li class="title"></li>
+          <li class="rated"></li>
+          <li class="runtime"></li>
+          <li class="rating"></li>
+        </ul>
       </div>
     </div>
     <div class="row">
       <div class="col s7">
         <!-- <div class="input-field col s6"> -->
-            <h4>Press for Randomn Activity</h4>
-            <!-- <button>BUTTON</button>
+        <h4>Press for Randomn Activity</h4>
+        <!-- <button>BUTTON</button>
             <section class="user-results">ABCDEFG</section> -->
         <!-- </div> -->
       </div>
       <!-- <div class="col s5"> -->
-        <span class="flow-text"
-          >5-columns wide pulled to the left by 7-columns.</span
-        >
+      <span class="flow-text"
+        >5-columns wide pulled to the left by 7-columns.</span
+      >
       <!-- </div> -->
     </div>
 
@@ -92,8 +95,8 @@
                 <a
                   class="grey-text text-lighten-3"
                   href="https://github.com/tcstl95"
-                  >Thomas    </a
-                >
+                  >Thomas
+                </a>
               </li>
               <li>
                 <a
@@ -106,15 +109,15 @@
                 <a
                   class="grey-text text-lighten-3"
                   href="https://github.com/kerryhokanson"
-                  >Kerry </a
-                >
+                  >Kerry
+                </a>
               </li>
               <li>
                 <a
                   class="grey-text text-lighten-3"
                   href="https://github.com/Ethansherrick?tab=repositories"
-                  >Ethan </a
-                >
+                  >Ethan
+                </a>
               </li>
             </ul>
           </div>
