--- a/index.html
+++ b/index.html
@@ -18,115 +18,51 @@
       </div>
     </nav>
 
-    <div class="row">
+    
       <div class="col s12 m6">
-        <div class="card blue-grey darken-1">
-          <div class="card-content white-text">
-            <span class="card-title">Welcome!</span>
+        <div class="card blue-grey darken-1 margin-welcome">
+          <div class="card-content white-text center-welcome">
+            <span class="card-title font-welcome">Welcome!</span>
             <p>A one stop to find new movies or music to listen to!</p>
           </div>
         </div>
       </div>
     </div>
 
-    <!-- <div class="movie-div">
-      <div class="row">
-        <div class="input-field col s6">
-      <input value="Movie Title..." id="first_name2" type="text" class="validate">
-      <label class="active" for="first_name2">Search for a Movie</label>
-        </div>
-        <div class="user-movies-results">Hello</div>
-      </div>
-    </div> -->
-    <div class="row">
-      <div class="col s7">
-        <div class="input-field col s6">
-          <input
+    <div class="middle-section">
+      <div class="left-side">
+        <label class="active" for="first_name2">Search for a Movie</label>
+        <input
             value=""
             id="first_name2"
             type="text"
             class="validate user-input"
           />
-          <button id="movie-btn">Click</button>
-          <label class="active" for="first_name2">Search for a Movie</label>
-        </div>
+          <button id="movie-btn">Search</button>
+          <ul class="results-flex">
+            <li class="title"></li>
+            <li class="rated"></li>
+            <li class="runtime"></li>
+            <li class="rating"></li>
+          </ul>
       </div>
-      <div class="col s5">
-        <ul class="results-flex">
-          <li class="title"></li>
-          <li class="rated"></li>
-          <li class="runtime"></li>
-          <li class="rating"></li>
+      <div class="middle">
+        <h4>My Favorites</h4>
+        <ul class="fav-movies">
+          <li>Harry Potter</li>
+          <li>Die Hard</li>
+          <li>Lord Of The Rings</li>
+          <li>Kill Bill</li>
+          <li>Yellowstone</li>
         </ul>
       </div>
-    </div>
-    <div class="row">
-      <div class="col s7">
-        <!-- <div class="input-field col s6"> -->
-        <h4>Press for Randomn Activity</h4>
-        <!-- <button>BUTTON</button>
-            <section class="user-results">ABCDEFG</section> -->
-        <!-- </div> -->
+      <div class="right-side">
+        <h4>Press for Random Activity</h4>
+        <button class="random-button">Click</button>
       </div>
-      <!-- <div class="col s5"> -->
-      <span class="flow-text"
-        >5-columns wide pulled to the left by 7-columns.</span
-      >
-      <!-- </div> -->
     </div>
 
-    <footer class="page-footer">
-      <div class="container">
-        <div class="row">
-          <div class="col l6 s12">
-            <h4 class="white-text">Group Project #1</h4>
-          </div>
-          <div class="col l4 offset-l2 s12">
-            <h5 class="white-text">Contributors</h5>
-            <ul>
-              <li>
-                <a
-                  class="grey-text text-lighten-3"
-                  href="https://github.com/svanmeter93"
-                  >Seth</a
-                >
-              </li>
-              <li>
-                <a
-                  class="grey-text text-lighten-3"
-                  href="https://github.com/tcstl95"
-                  >Thomas
-                </a>
-              </li>
-              <li>
-                <a
-                  class="grey-text text-lighten-3"
-                  href="https://github.com/Paultcodes?tab=repositories"
-                  >Paul</a
-                >
-              </li>
-              <li>
-                <a
-                  class="grey-text text-lighten-3"
-                  href="https://github.com/kerryhokanson"
-                  >Kerry
-                </a>
-              </li>
-              <li>
-                <a
-                  class="grey-text text-lighten-3"
-                  href="https://github.com/Ethansherrick?tab=repositories"
-                  >Ethan
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <!-- <div class="footer-copyright">
-        <div class="container">© 2022 Copyright Text</div>
-      </div> -->
-    </footer>
+   
     <script src="/JS/api1.js"></script>
     <script src="/JS/api2.js"></script>
   </body>
