--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
 
    
-    <script src="/JS/api1.js"></script>
-    <script src="/JS/api2.js"></script>
+    <script src="./JS/api1.js"></script>
+    <script src="./JS/api2.js"></script>
   </body>
 </html>
