--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
       <div class="right-side">
         <h4>Press for Random Activity</h4>
         <button class="random-button">Click</button>
+        <ul class="results-flex">
+          <li class="activity"></li>
+        </ul>
       </div>
     </div>
 
