--- a/index.html
+++ b/index.html
@@ -47,14 +47,10 @@
           </ul>
       </div>
       <div class="middle">
-        <h4>My Favorites</h4>
-        <ul class="fav-movies">
-          <li>Harry Potter</li>
-          <li>Die Hard</li>
-          <li>Lord Of The Rings</li>
-          <li>Kill Bill</li>
-          <li>Yellowstone</li>
-        </ul>
+        <h4>Movie History</h4>
+        <div class="history">
+          
+        </div>
       </div>
       <div class="right-side">
         <h4>Press for Random Activity</h4>
@@ -65,8 +61,35 @@
       </div>
     </div>
 
+    <footer class="page-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">Footer Content</h5>
+            <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <h5 class="white-text">Links</h5>
+            <ul>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="container">
+        © 2014 Copyright Text
+        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+        </div>
+      </div>
+    </footer>
+
    
     <script src="./JS/api1.js"></script>
     <script src="./JS/api2.js"></script>
+    <script src="./JS/localStorage.js"></script>
   </body>
 </html>
