Created Clear Button

--- a/index.html
+++ b/index.html
@@ -45,10 +45,14 @@
             <li class="runtime"></li>
             <li class="rating"></li>
           </ul>
-      </div>
+          <button type="button" onClick="window.location.reload()">Clear</button>
+  
+          
+</div>
       <div class="middle">
         <h4>Movie History</h4>
-        <div class="history">
+        <button id="clearSearches">Clear</button>
+        <div id="History" class="history">
           
         </div>
       </div>
@@ -91,5 +95,6 @@
     <script src="./JS/api1.js"></script>
     <script src="./JS/api2.js"></script>
     <script src="./JS/localStorage.js"></script>
+    <script src="./JS/main2.js"></script>
   </body>
 </html>
